@@ -67,11 +67,39 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|cloud
+operator|.
+name|AbstractFullDistribZkTestBase
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|common
 operator|.
 name|params
 operator|.
 name|ModifiableSolrParams
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
+name|ShardParams
 import|;
 end_import
 begin_import
@@ -1367,6 +1395,52 @@ argument_list|,
 literal|"payload asc"
 argument_list|,
 literal|"distrib.singlePass"
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|handle
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
+name|handle
+operator|.
+name|put
+argument_list|(
+literal|"timestamp"
+argument_list|,
+name|SKIPVAL
+argument_list|)
+expr_stmt|;
+name|handle
+operator|.
+name|put
+argument_list|(
+literal|"_version_"
+argument_list|,
+name|SKIPVAL
+argument_list|)
+expr_stmt|;
+comment|// we don't to compare maxScore because most distributed requests return it anyway (just because they have score already)
+name|handle
+operator|.
+name|put
+argument_list|(
+literal|"maxScore"
+argument_list|,
+name|SKIPVAL
+argument_list|)
+expr_stmt|;
+name|query
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"{!func}id"
+argument_list|,
+name|ShardParams
+operator|.
+name|DISTRIB_SINGLE_PASS
 argument_list|,
 literal|"true"
 argument_list|)
